首頁 shop名字更改 MENU FOOTER頁面串接

--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>首頁</title>
-    <link rel="stylesheet" href="./css/index3.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <header id="topbar">
     <div class="navbar">
@@ -59,56 +59,40 @@
                 <div class="step"><img src="./index_images/step2.png" alt=""></div>
                 <div class="step"><img src="./index_images/step3.png" alt=""></div>
             </div>
-            <div class="btn_wrap">
-                <a class="btn_diy" href="./customized.html">
-                    <div class="btn_content">開始設計</div>
-                </a>
-            </div>
+            <a class="btn_diy" href="./customized.html">
+                <div class="btn_content">開始設計</div>
+            </a>
 
         </section>
         <section id="CLASSIC">
-
-            <div class="classic_left">
-                <img class="circle_title" src="./index_images/classic--circle-text.svg" alt="">
+            <div class="section_classic">
                 <div class="little_bg"></div>
-
-
-            </div>
-            <div class="class_right">
-                <a href="./shop_page2.html"><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
+                <img class="circle_title" src="./index_images/classic--circle-text.svg" alt="">
+                <img class="title" src="./index_images/classic_title.svg" alt="">
+                <img class="main_pic" src="./index_images/classic--pic.png" alt="">
+                <a href=""><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
                 <div class="text_all">
                     <div class="text1">我們秉持著精益求精的態度</div>
                     <div class="text2">從全球各地精選最優質的可可豆</div>
                     <div class="text3">每一顆都經過嚴格篩選與手工處理</div>
                     <div class="text4">確保呈現給您的每一口都是純粹的享受</div>
                 </div>
-                <div class="main_wrap">
-                    <img class="main_pic" src="./index_images/classic--pic.png" alt="">
-                    <img class="title" src="./index_images/classic_title.svg" alt="">
-                </div>
-
             </div>
-
         </section>
         <section id="ABOUT">
-            <div class="about_left">
+            <div class="section_about">
                 <img class="main_pic" src="./index_images/about--pic.png" alt="">
-            </div>
-            <div class="about_right">
-                
-                <div class="little_bg">
-                    <img class="title" src="./index_images/about--title.svg" alt="">
-                    <div class="text_all">
-                        <div class="text1">在Mélange</div>
-                        <div class="text2">巧克力都可以根據你的需求量身定制</div>
-                        <div class="text3">無論是刻上名字，還是融入特殊元素</div>
-                        <div class="text4">我們都能滿足你的個性化需求</div>
-                        <div class="text5">讓每一份禮物更加獨特而珍貴</div>
-                    </div>
-                </div>
+                <img class="title" src="./index_images/about--title.svg" alt="">
+                <div class="little_bg"></div>
                 <img class="circle_title" src="./index_images/about--circle-text.png" alt="">
-
-
+                <div class="text_all">
+                    <div class="text1">在Mélange</div>
+                    <div class="text2">巧克力都可以根據你的需求量身定制</div>
+                    <div class="text3">無論是刻上名字，還是融入特殊元素</div>
+                    <div class="text4">我們都能滿足你的個性化需求</div>
+                    <div class="text5">讓每一份禮物更加獨特而珍貴</div>
+                </div>
+            </div>
             </div>
         </section>
         <section id="QUALITY">
@@ -157,7 +141,6 @@
                 <img class="pic" src="./index_images/appearance--pic.svg" alt="">
                 <div class="arch"></div>
                 <div class="box_br"></div>
-
                 <div class="text_all">
                     <div class="text1">我們的巧克力不僅僅是味覺的饗宴</div>
                     <div class="text2">更是一件藝術品。</div>
@@ -167,16 +150,14 @@
 
                 </div>
 
-
             </div>
         </section>
-        <img class="bg_bottom" src="./index_images/bottom-bg.svg" alt="">
+        <img src="./index_images/bottom-bg.svg" alt="">
 
 
 </main>
 <footer></footer>
-<script src="./js/index2.js"></script>
-
+<div></div>
 </body>
 
 </html>
