--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>首頁</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link rel="stylesheet" href="./css/index3.css">
+    <!-- 引用menu -->
+    <script type="text/babel" src="./Menu.jsx"></script>
+    <link rel="stylesheet" href="./css/Menu.css">
+
 </head>
-<header id="topbar">
-    <div class="navbar">
-        <nav class="navigation">
-            <ul class="menu">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SHOP</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">NEWS</a></li>
-                <li><a href="#">Q&A</a></li>
-                <li><a href="#" class="customized-btn">customized</a></li>
-            </ul>
-            <ul class="icon">
-                <button></button>
-                <li><a class="icon-member" href=""></a></li>
-                <li><a class="icon-car" href=""></a></li>
-                <li><a class="icon-search" href=""></a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
 <main>
 
     <body>
+        <div id="menu"></div>
+        <script type="text/babel">
+            function App() {
+                React.useEffect(() => {
+                    menuJS();
+                }, []); // 确保 toggleDropdown 在组件渲染后调用
+                return (
+                    <Menu />
+                )
+            }
+            ReactDOM
+                .createRoot(document.getElementById('menu'))
+                .render(<App />);
+        </script>
         <section id="BANNER">
 
             <div class="logo">
@@ -59,47 +60,61 @@
                 <div class="step"><img src="./index_images/step2.png" alt=""></div>
                 <div class="step"><img src="./index_images/step3.png" alt=""></div>
             </div>
-            <a class="btn_diy" href="./customized.html">
-                <div class="btn_content">開始設計</div>
-            </a>
+            <div class="btn_wrap">
+                <a class="btn_diy" href="./customized.html">
+                    <div class="btn_content">開始設計</div>
+                </a>
+            </div>
 
         </section>
         <section id="CLASSIC">
-            <div class="section_classic">
-                <div class="little_bg"></div>
+
+            <div class="classic_left">
                 <img class="circle_title" src="./index_images/classic--circle-text.svg" alt="">
-                <img class="title" src="./index_images/classic_title.svg" alt="">
-                <img class="main_pic" src="./index_images/classic--pic.png" alt="">
-                <a href=""><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
+                <div class="little_bg"></div>
+
+
+            </div>
+            <div class="class_right">
+                <a href="./shop_page2.html"><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
                 <div class="text_all">
                     <div class="text1">我們秉持著精益求精的態度</div>
                     <div class="text2">從全球各地精選最優質的可可豆</div>
                     <div class="text3">每一顆都經過嚴格篩選與手工處理</div>
                     <div class="text4">確保呈現給您的每一口都是純粹的享受</div>
                 </div>
+                <div class="main_wrap">
+                    <img class="main_pic" src="./index_images/classic--pic.png" alt="">
+                    <img class="title" src="./index_images/classic_title.svg" alt="">
+                </div>
+
             </div>
+
         </section>
         <section id="ABOUT">
-            <div class="section_about">
+            <div class="about_left">
                 <img class="main_pic" src="./index_images/about--pic.png" alt="">
-                <img class="title" src="./index_images/about--title.svg" alt="">
-                <div class="little_bg"></div>
-                <img class="circle_title" src="./index_images/about--circle-text.png" alt="">
-                <div class="text_all">
-                    <div class="text1">在Mélange</div>
-                    <div class="text2">巧克力都可以根據你的需求量身定制</div>
-                    <div class="text3">無論是刻上名字，還是融入特殊元素</div>
-                    <div class="text4">我們都能滿足你的個性化需求</div>
-                    <div class="text5">讓每一份禮物更加獨特而珍貴</div>
-                </div>
             </div>
+            <div class="about_right">
+
+                <div class="little_bg">
+                    <img class="title" src="./index_images/about--title.svg" alt="">
+                    <div class="text_all">
+                        <div class="text1">在Mélange</div>
+                        <div class="text2">巧克力都可以根據你的需求量身定制</div>
+                        <div class="text3">無論是刻上名字，還是融入特殊元素</div>
+                        <div class="text4">我們都能滿足你的個性化需求</div>
+                        <div class="text5">讓每一份禮物更加獨特而珍貴</div>
+                    </div>
+                </div>
+                <img class="circle_title" src="./index_images/about--circle-text.png" alt="">
+
+
             </div>
         </section>
         <section id="QUALITY">
-            <div class="section_quality">
-                <div class="bg_bottom"></div>
-                <img class="quality_banner" src="./index_images/quality--all.svg" alt="">
-
+            <div class="pic_box">
+                <div class="quality_title">QUALITY</div>
             </div>
         </section>
         <section id="INGREDIENT">
@@ -141,6 +156,7 @@
                 <img class="pic" src="./index_images/appearance--pic.svg" alt="">
                 <div class="arch"></div>
                 <div class="box_br"></div>
+
                 <div class="text_all">
                     <div class="text1">我們的巧克力不僅僅是味覺的饗宴</div>
                     <div class="text2">更是一件藝術品。</div>
@@ -150,14 +166,35 @@
 
                 </div>
 
+
             </div>
         </section>
-        <img src="./index_images/bottom-bg.svg" alt="">
+        <div class="bottom">
+            <div class="bottom_content"></div>
+
+        </div>
+        <!-- footer -->
+    <div id="footer"></div>
+    <!-- 引用footer -->
+    <script type="text/babel" src="./Footer.jsx"></script>
+    <link rel="stylesheet" href="./css/Footer.css">
+    <script type="text/babel">
+        function App() {
+            return (
+                <Footer />
+            )
+        }
+        ReactDOM
+            .createRoot(document.getElementById('footer'))
+            .render(<App />);
+    </script>
+
 
 
 </main>
-<footer></footer>
-<div></div>
+<script src="./js/index2.js"></script>
+<script src="./js/Menu.js"></script>
+
 </body>
 
 </html>
