--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/Customization.css">
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" src="./Menu.jsx"></script>
+    <script src="./js/Menu.js"></script>
 </head>
 
 <body>
+    <div id="menu"></div>
+    <script type="text/babel">
+        function App() {
+            React.useEffect(() => {
+                menuJS();
+            }, []); // 确保 toggleDropdown 在组件渲染后调用
+            return (
+                <Menu />
+            )
+        }
+        ReactDOM
+            .createRoot(document.getElementById('menu'))
+            .render(<App />);
+    </script>
     <main id="main">
-        <div id="menu">
+        <!-- <div id="menu">
             <ul id="menu_id">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">SHOP</a></li>
@@ -23,19 +42,19 @@
                             alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
             </ul>
-        </div>
+        </div> -->
         <div id="all">
             <div id="left_sidebar_second_page">
                 <ul>
-                    <li class="left_sidebar_img" id="left_sidebar_img_1"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_1"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/Customized_cards/left_menu/Frame 1-1.svg" alt="">
                             <p>樣式</p>
                         </a></li>
-                    <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/Customized_cards/left_menu/Frame 2-1.svg" alt="">
                             <p>顏色</p>
                         </a></li>
-                    <li class="left_sidebar_img" id="left_sidebar_img_3"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_3"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/Customized_cards/left_menu/Frame 3-1.svg" alt="">
                             <p>文字</p>
                         </a>
@@ -44,23 +63,23 @@
                 <div id="left_sidebar_four_page_div1">
                     <p id="left_sidebar_four_page_div1_p">樣式</p>
                     <div id="left_sidebar_four_page_div1_div">
-                        <a href="#" id="left_sidebar_four_page_div1_div_a1"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a1"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-1.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a2"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a2"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-2.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a3"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a3"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-3.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a4"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a4"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-4.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a5"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a5"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-5.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a6"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a6"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-6.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a7"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a7"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-7.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a8"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a8"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-8.svg" alt=""></a>
-                        <a href="#" id="left_sidebar_four_page_div1_div_a9"><img
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div1_div_a9"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 1-9.svg" alt=""></a>
                     </div>
                     <div id="left_sidebar_four_page_div1_box">
@@ -70,22 +89,22 @@
                 <div id="left_sidebar_four_page_div2">
                     <p id="left_sidebar_four_page_div2_p">顏色</p>
                     <div id="left_sidebar_four_page_div2_1">
-                        <a href="#" id="Zone_four_white"><img
+                        <a href="javascript:void(0)" id="Zone_four_white"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 2.svg" alt=""
                                 id="Zone_four_white_img"></a>
-                        <a href="#" id="Zone_four_Almonds"><img
+                        <a href="javascript:void(0)" id="Zone_four_Almonds"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 3.svg" alt=""
                                 id="Zone_four_Almonds_img"></a>
-                        <a href="#" id="Zone_four_Blue"><img
+                        <a href="javascript:void(0)" id="Zone_four_Blue"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 4.svg" alt=""
                                 id="Zone_four_Blue_img"></a>
-                        <a href="#" id="Zone_four_pink"><img
+                        <a href="javascript:void(0)" id="Zone_four_pink"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 5.svg" alt=""
                                 id="Zone_four_pink_img"></a>
-                        <a href="#" id="Zone_four_brown"><img
+                        <a href="javascript:void(0)" id="Zone_four_brown"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 6.svg" alt=""
                                 id="Zone_four_brown_img"></a>
-                        <a href="#" id="Zone_four_Green"><img
+                        <a href="javascript:void(0)" id="Zone_four_Green"><img
                                 src="./images/Custom_block/Customized_cards/left_sidebar/Frame 7.svg" alt=""
                                 id="Zone_four_Green_img"></a>
                     </div>
@@ -102,12 +121,12 @@
                         <p>字體</p>
                     </div>
                     <div id="left_sidebar_four_page_div3_div3">
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 8.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 9.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 10.svg"
-                                alt=""></a>
+                        <a href="javascript:void(0)"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 8.svg" alt=""></a>
+                        <a href="javascript:void(0)"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 9.svg" alt=""></a>
+                        <a href="javascript:void(0)"><img
+                                src="./images/Custom_block/Customized_cards/left_sidebar/Frame 10.svg" alt=""></a>
                     </div>
                     <div id="left_sidebar_four_page_div3_div1_hr">
                         <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
@@ -116,15 +135,15 @@
                         <p id="left_sidebar_four_page_div3_div1_p3">顏色</p>
                     </div>
                     <div id="left_sidebar_four_page_div3_div4_div">
-                        <a href="#" id="left_sidebar_four_page_div3_div4_diva1">
-                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 12.svg"
-                                alt="" id="left_sidebar_four_page_div3_div4_div_img1"></a>
-                        <a href="#" id="left_sidebar_four_page_div3_div4_diva2">
-                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 13.svg"
-                                alt="" id="left_sidebar_four_page_div3_div4_div_img2"></a>
-                        <a href="#" id="left_sidebar_four_page_div3_div4_diva3">
-                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 104.svg"
-                                alt="" id="left_sidebar_four_page_div3_div4_div_img3"></a>
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div3_div4_diva1">
+                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 12.svg" alt=""
+                                id="left_sidebar_four_page_div3_div4_div_img1"></a>
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div3_div4_diva2">
+                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 13.svg" alt=""
+                                id="left_sidebar_four_page_div3_div4_div_img2"></a>
+                        <a href="javascript:void(0)" id="left_sidebar_four_page_div3_div4_diva3">
+                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 104.svg" alt=""
+                                id="left_sidebar_four_page_div3_div4_div_img3"></a>
                     </div>
                     <div id="left_sidebar_four_page_div3_box">
                         <img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt="">
@@ -154,15 +173,19 @@
                     <p id="center_display_second_page_divp"></p>
                 </div>
                 <div class="center_display_second_page_box">
-                    <img src="./images/Custom_block/Customized_cards/downloadedImage 2.svg" alt="">
+
+                    <img src="./images/Custom_block/Customized_cards/downloadedImage 2.svg" alt=""
+                        id="center_display_second_page_box_Change">
                 </div>
             </div>
             <div id="right_sidebar_second_page">
                 <div>
                     <ul>
-                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 28.svg" alt=""
+                        <li><a href="javascript:void(0)"><img
+                                    src="./images/Custom_block/small_chocolate/left_sidebar/Frame 28.svg" alt=""
                                     class="right_sidebar_img"></a></li>
-                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 29.svg" alt=""
+                        <li><a href="javascript:void(0)"><img
+                                    src="./images/Custom_block/small_chocolate/left_sidebar/Frame 29.svg" alt=""
                                     class="right_sidebar_img"></a></li>
                     </ul>
                 </div>
@@ -171,32 +194,33 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li" id="Select_function"><a href="#"><img
+                    <li class="menu_below_li" id="Select_function"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 1.svg" alt="" id="Select_function_img">
                             <!-- <p>選取</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
+                    <li class="menu_below_li" id="menu_below_li_left2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 2.svg" alt="" id="menu_below_li_left2_img">
                             <!-- <p>縮放</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu_below/Frame 3.svg" alt="" id="menu_below_bug_img">
+                    <li class="menu_below_li" id="menu_below_li_left1"><a href="javascript:void(0)"
+                            id="menu_below_bug"><img src="./images/Custom_block/menu_below/Frame 3.svg" alt=""
+                                id="menu_below_bug_img">
                             <!-- <p>旋轉</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="garbage_can"><a href="#"><img
+                    <li class="menu_below_li" id="garbage_can"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 4.svg" alt="" id="garbage_can_img">
                             <!-- <p>刪除</p> -->
                         </a>
                     </li>
-                    <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
+                    <li class="menu_below_li" id="menu_below_li_right1"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 5.svg" alt="" id="menu_below_li_right1_img">
                             <!-- <p>翻轉</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
+                    <li class="menu_below_li" id="menu_below_li_right2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 6.svg" alt="" id="menu_below_li_right2_img">
                             <!-- <p>上一步</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_right3"><a href="#">
+                    <li class="menu_below_li" id="menu_below_li_right3"><a href="javascript:void(0)">
                             <img src="./images/Custom_block/menu_below/Frame 7.svg" alt=""
                                 id="menu_below_li_right3_img">
                             <!-- <p>重製</p> -->
