--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/Customization.css">
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" src="./Menu.jsx"></script>
+    <script src="./js/Menu.js"></script>
 </head>
 
 <body>
+    <div id="menu"></div>
+    <script type="text/babel">
+        function App() {
+            React.useEffect(() => {
+                menuJS();
+            }, []); // 确保 toggleDropdown 在组件渲染后调用
+            return (
+                <Menu />
+            )
+        }
+        ReactDOM
+            .createRoot(document.getElementById('menu'))
+            .render(<App />);
+    </script>
     <main id="main">
-        <div id="menu">
+        <!-- <div id="menu">
             <ul id="menu_id">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">SHOP</a></li>
@@ -23,19 +42,19 @@
                             alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
             </ul>
-        </div>
+        </div> -->
         <div id="all">
             <div id="left_sidebar_second_page">
                 <ul>
-                    <li class="left_sidebar_img" id="left_sidebar_img_1"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_1"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 1-2.svg" alt="">
                             <p>樣式</p>
                         </a></li>
-                    <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/small_chocolate//left_sidebar/Frame 2-3.svg" alt="">
                             <p>顏色</p>
                         </a></li>
-                    <li class="left_sidebar_img" id="left_sidebar_img_3"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_3"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 3-4.svg" alt="">
                             <p>緞帶</p>
                         </a>
@@ -45,9 +64,9 @@
                     <p id="left_sidebar_three_page_div1_p">樣式</p>
                     <div id="left_sidebar_three_page_div1_1">
                         <div>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a1"><img
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a1"><img
                                     src="./images/Custom_block/box/left_sidebar/Fig 1.svg" alt=""></a>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a2"><img
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a2"><img
                                     src="./images/Custom_block/box/left_sidebar/Frame 2.svg" alt=""></a>
                         </div>
                     </div>
@@ -57,11 +76,12 @@
                     <div id="left_sidebar_three_page_div1_2">
                         <p>情人節</p>
                         <div>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a3"><img
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a3"><img
                                     src="./images/Custom_block/box/left_sidebar/Frame 3.svg" alt=""></a>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a4"><img
-                                    src="./images/Custom_block/box/left_sidebar/Frame 4.svg" alt=""></a>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a5"><img
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a4"><img
+                                    src="./images/Custom_block/box/left_sidebar/Frame 4.svg" alt=""
+                                    id="left_sidebar_three_page_div1_1_a4_img"></a>
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a5"><img
                                     src="./images/Custom_block/box/left_sidebar/Frame 5.svg" alt=""></a>
                         </div>
                     </div>
@@ -71,11 +91,11 @@
                     <div id="left_sidebar_three_page_div1_3">
                         <p>生日</p>
                         <div>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a6"><img
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a6"><img
                                     src="./images/Custom_block/box/left_sidebar/Frame 6.svg" alt=""></a>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a7"><img
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a7"><img
                                     src="./images/Custom_block/box/left_sidebar/Frame 7.svg" alt=""></a>
-                            <a href="#" id="left_sidebar_three_page_div1_1_a8"><img
+                            <a href="javascript:void(0)" id="left_sidebar_three_page_div1_1_a8"><img
                                     src="./images/Custom_block/box/left_sidebar/Frame 8.svg" alt=""></a>
                         </div>
                     </div>
@@ -86,22 +106,22 @@
                 <div id="left_sidebar_three_page_div2">
                     <p id="left_sidebar_three_page_div2_p">顏色</p>
                     <div id="left_sidebar_three_page_div2_1">
-                        <a href="#" id="Zone_three_white">
+                        <a href="javascript:void(0)" id="Zone_three_white">
                             <img src="./images/Custom_block/box/left_sidebar/Frame 9.svg" alt=""
                                 id="Zone_three_white_img"></a>
-                        <a href="#" id="Zone_three_almonds">
+                        <a href="javascript:void(0)" id="Zone_three_almonds">
                             <img src="./images/Custom_block/box/left_sidebar/Frame 10.svg" alt=""
                                 id="Zone_three_almonds_img"></a>
-                        <a href="#" id="Zone_three_blue">
+                        <a href="javascript:void(0)" id="Zone_three_blue">
                             <img src="./images/Custom_block/box/left_sidebar/Frame 11.svg" alt=""
                                 id="Zone_three_blue_img"></a>
-                        <a href="#" id="District_three_pink">
+                        <a href="javascript:void(0)" id="District_three_pink">
                             <img src="./images/Custom_block/box/left_sidebar/Frame 12.svg" alt=""
                                 id="District_three_pink_img"></a>
-                        <a href="#" id="Zone_three_brown">
+                        <a href="javascript:void(0)" id="Zone_three_brown">
                             <img src="./images/Custom_block/box/left_sidebar/Frame 13.svg" alt=""
                                 id="Zone_three_brown_img"></a>
-                        <a href="#" id="Zone_three_green">
+                        <a href="javascript:void(0)" id="Zone_three_green">
                             <img src="./images/Custom_block/box/left_sidebar/Frame 14.svg" alt=""
                                 id="Zone_three_green_img"></a>
                     </div>
@@ -115,31 +135,37 @@
                         <p id="left_sidebar_three_page_div3_div_p">顏色</p>
                     </div>
                     <div id="left_sidebar_three_page_div3_div_1">
-                        <a href="#" id=""><img src="./images/Custom_block/box/left_sidebar/Frame 15.svg" alt=""></a>
-                        <a href="#" id="ribbon_red"><img src="./images/Custom_block/box/left_sidebar/Frame 16.svg"
-                                alt="" id="ribbon_red_img"></a>
-                        <a href="#" id="ribbon_orange"><img src="./images/Custom_block/box/left_sidebar/Frame 17.svg"
-                                alt="" id="ribbon_orange_img"></a>
-                        <a href="#" id="ribbon_yellow"><img src="./images/Custom_block/box/left_sidebar/Frame 18.svg"
-                                alt="" id="ribbon_yellow_img"></a>
-                        <a href="#" id="ribbon_pink"><img src="./images/Custom_block/box/left_sidebar/Frame 19.svg"
-                                alt="" id="ribbon_pink_img"></a>
-                        <a href="#" id=""><img src="./images/Custom_block/box/left_sidebar/Frame 20.svg" alt=""></a>
+                        <a href="javascript:void(0)" id=""><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 15.svg" alt=""></a>
+                        <a href="javascript:void(0)" id="ribbon_red"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 16.svg" alt=""
+                                id="ribbon_red_img"></a>
+                        <a href="javascript:void(0)" id="ribbon_orange"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 17.svg" alt=""
+                                id="ribbon_orange_img"></a>
+                        <a href="javascript:void(0)" id="ribbon_yellow"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 18.svg" alt=""
+                                id="ribbon_yellow_img"></a>
+                        <a href="javascript:void(0)" id="ribbon_pink"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 19.svg" alt=""
+                                id="ribbon_pink_img"></a>
+                        <a href="javascript:void(0)" id=""><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 20.svg" alt=""></a>
                     </div>
                     <div id="left_sidebar_three_page_div3_hr">
                         <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
                     </div>
                     <div id="left_sidebar_three_page_div3_div_2">
-                        <a href="#" id="bow_tie1"><img src="./images/Custom_block/box/left_sidebar/Frame 21.svg" alt=""
-                                id="bow_tie1_img"></a>
-                        <a href="#" id="bow_tie2"><img src="./images/Custom_block/box/left_sidebar/Frame 22.svg" alt=""
-                                id="bow_tie2_img"></a>
-                        <a href="#" id="bow_tie3"><img src="./images/Custom_block/box/left_sidebar/Frame 23.svg" alt=""
-                                id="bow_tie3_img"></a>
-                        <a href="#" id="bow_tie4"><img src="./images/Custom_block/box/left_sidebar/Frame 24.svg" alt=""
-                                id="bow_tie4_img"></a>
-                        <!-- <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 25.svg" alt=""></a> -->
-                        <!-- <a href="#"><img src="./images/Custom_block/box/left_sidebar/Frame 26.svg" alt=""></a> -->
+                        <a href="javascript:void(0)" id="bow_tie1"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 21.svg" alt="" id="bow_tie1_img"></a>
+                        <a href="javascript:void(0)" id="bow_tie2"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 22.svg" alt="" id="bow_tie2_img"></a>
+                        <a href="javascript:void(0)" id="bow_tie3"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 23.svg" alt="" id="bow_tie3_img"></a>
+                        <a href="javascript:void(0)" id="bow_tie4"><img
+                                src="./images/Custom_block/box/left_sidebar/Frame 24.svg" alt="" id="bow_tie4_img"></a>
+                        <!-- <a href="javascript:void(0)"><img src="./images/Custom_block/box/left_sidebar/Frame 25.svg" alt=""></a> -->
+                        <!-- <a href="javascript:void(0)"><img src="./images/Custom_block/box/left_sidebar/Frame 26.svg" alt=""></a> -->
                     </div>
                     <div id="left_sidebar_three_page_div3_box">
                         <img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt="">
@@ -171,9 +197,11 @@
             <div id="right_sidebar_second_page">
                 <div>
                     <ul>
-                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 28.svg" alt=""
+                        <li><a href="javascript:void(0)"><img
+                                    src="./images/Custom_block/small_chocolate/left_sidebar/Frame 28.svg" alt=""
                                     class="right_sidebar_img"></a></li>
-                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 29.svg" alt=""
+                        <li><a href="javascript:void(0)"><img
+                                    src="./images/Custom_block/small_chocolate/left_sidebar/Frame 29.svg" alt=""
                                     class="right_sidebar_img"></a></li>
                     </ul>
                 </div>
@@ -182,32 +210,33 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li" id="Select_function"><a href="#"><img
+                    <li class="menu_below_li" id="Select_function"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 1.svg" alt="" id="Select_function_img">
                             <!-- <p>選取</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_left2"><a href="#"><img
+                    <li class="menu_below_li" id="menu_below_li_left2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 2.svg" alt="" id="menu_below_li_left2_img">
                             <!-- <p>縮放</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_left1"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu_below/Frame 3.svg" alt="" id="menu_below_bug_img">
+                    <li class="menu_below_li" id="menu_below_li_left1"><a href="javascript:void(0)"
+                            id="menu_below_bug"><img src="./images/Custom_block/menu_below/Frame 3.svg" alt=""
+                                id="menu_below_bug_img">
                             <!-- <p>旋轉</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="garbage_can"><a href="#"><img
+                    <li class="menu_below_li" id="garbage_can"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 4.svg" alt="" id="garbage_can_img">
                             <!-- <p>刪除</p> -->
                         </a>
                     </li>
-                    <li class="menu_below_li" id="menu_below_li_right1"><a href="#"><img
+                    <li class="menu_below_li" id="menu_below_li_right1"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 5.svg" alt="" id="menu_below_li_right1_img">
                             <!-- <p>翻轉</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_right2"><a href="#"><img
+                    <li class="menu_below_li" id="menu_below_li_right2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 6.svg" alt="" id="menu_below_li_right2_img">
                             <!-- <p>上一步</p> -->
                         </a></li>
-                    <li class="menu_below_li" id="menu_below_li_right3"><a href="#">
+                    <li class="menu_below_li" id="menu_below_li_right3"><a href="javascript:void(0)">
                             <img src="./images/Custom_block/menu_below/Frame 7.svg" alt=""
                                 id="menu_below_li_right3_img">
                             <!-- <p>重製</p> -->
@@ -220,11 +249,14 @@
                 <ul>
                     <li id="Prompt_field_img0"><a href="./Customization_two_page.html"><img
                                 src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></a></li>
-                    <li id="Prompt_field_img1"><img src="./images/Custom_block/Prompt_field/Frame 31.svg" alt=""></li>
-                    <li id="Prompt_field_img2"><img src="./images/Custom_block/Prompt_field/Frame 2.svg" alt=""></li>
+                    <li id="Prompt_field_img1"><img src="./images/Custom_block/Prompt_field/Frame 31.svg" alt="">
+                    </li>
+                    <li id="Prompt_field_img2"><img src="./images/Custom_block/Prompt_field/Frame 2.svg" alt="">
+                    </li>
                     <li id="Prompt_field_img3"><img src="./images/Custom_block/box/left_sidebar/Frame 27.svg" alt="">
                     </li>
-                    <li id="Prompt_field_img4"><img src="./images/Custom_block/Prompt_field/Frame 4.svg" alt=""></li>
+                    <li id="Prompt_field_img4"><img src="./images/Custom_block/Prompt_field/Frame 4.svg" alt="">
+                    </li>
                     <li id="Prompt_field_img5"><a href="./Customization_four_page.html"><img
                                 src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></a></li>
                 </ul>
