--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <link rel="stylesheet" href="./css/index3.css">
+    <link rel="stylesheet" href="./css/index.css">
     <!-- 引用menu -->
     <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
@@ -38,18 +38,18 @@
             </div>
             <div class="banner-content">
                 <div class="choc">
-                    <div class="title_white">choc</div>
-                    <div class="title_br">choc</div>
+                    <span class="title_white "><p class="slide-up">c</p><p class="slide-up">h</p><p class="slide-up">o</p><p class="slide-up">c</p></span>
+                    <span class="title_br slide-up">choc</span>
                 </div>
+
                 <div class="arch_wrap">
                     <div class="arch"></div>
                     <img class="circle_text" src="./index_images/banner--circle-text.svg" alt="">
-
                 </div>
 
                 <div class="olate">
-                    <div class="title_white">olate</div>
-                    <div class="title_br">olate</div>
+                    <span class="title_white slide-up">olate</span>
+                    <span class="title_br slide-up">olate</span>
                 </div>
             </div>
         </section>
@@ -76,7 +76,7 @@
 
             </div>
             <div class="class_right">
-                <a href="./shop_page2.html"><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
+                <a href="./shop.html"><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
                 <div class="text_all">
                     <div class="text1">我們秉持著精益求精的態度</div>
                     <div class="text2">從全球各地精選最優質的可可豆</div>
